# on-colorscheme-changed

./: Cargo.toml  README.md  deploy.sh  on-colorscheme-changed.service  theme-switcher.toml
src/: main.rs
